--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         padding: 0px 10px;
         margin: 50px ;
         text-align: center;
-        background-image: url("imagenes/fondo.png");
+        background-image: url("img/fondo.png");
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
@@ -29,9 +29,14 @@
 
     .card {
     border: 10px solid #ccc;
-    padding: 120px;
+    padding: 80px;
     text-align: center;
+    border-radius: 50%;
+    background-image: url(img/avaricia2.png);
+    background-image: no-repeat;
+    background-size: cover;
     }
+
 
 </style>
 
@@ -43,18 +48,18 @@
     </h1>
     <!--Tarjetas-->
     <div class="game-container">
-        <div class="card"><img src="imagenes/demonio.png" alt=""></div>
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div> 
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div> 
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div> 
-        <div class="card"><img src="" alt=""></div>
-        <div class="card"><img src="" alt=""></div>
+        <div class="card"><img src="img/avaricia.png"  alt=""></div>
+        <div class="card"><img src="img/homer-grande.png" width="40%" alt=""></div>
+        <div class="card"><img src="img/homero.png" width="40%" alt=""></div>
+        <div class="card"><img src="img/ira.png" width="40%" alt=""></div>
+        <div class="card"><img src="img/no_bautizados.png" width="40%" alt=""></div>
+        <div class="card"><img src="img/sexi.png" width="40%" alt=""></div>
+        <div class="card"><img src="img/avaricia.png" width="40%" alt=""></div>
+        <div class="card"><img src="img/homer-grande.png" width="40%" alt=""></div>
+        <div class="card"><img src="img/homero.png" width="40%" alt=""></div>
+        <div class="card"><img src="img/ira.png" width="40%" alt=""></div>
+        <div class="card"><img src="img/no_bautizados.png" width="40%" alt=""></div>
+        <div class="card"><img src="img/sexi.png" width="40%" alt=""></div>
 
     <!--JS-->
 <script></script>
