--- a/pares.html
+++ b/pares.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title> Infierno</title>
+    <link rel="shortcut icon" href="img/demonio.png" type="image/x-icon">
     <style>
         body{
             width: 500px;
